samples/_failures_safe/1761327237_5dd10c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b411b17c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b411b17c.c:175:14: error: expected ‘;’ at end of input
  175 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_b411b17c.c:175:9: error: expected declaration or statement at end of input
  175 |         token
      |         ^~~~~
./samples/SAFE/__tmp_b411b17c.c:175:9: error: expected declaration or statement at end of input
